<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".activities.MainActivity">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />





        <RelativeLayout
            android:id="@+id/hot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/first"
                android:layout_margin="8dp">

                <RelativeLayout
                    android:id="@+id/hot1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/f1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal">

                        <TextView
                            android:id="@+id/ra"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:fontFamily="@font/abc"
                            android:text="@string/status"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textSize="22sp" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:layout_marginStart="8dp"
                            android:fontFamily="@font/abc"
                            android:text="@string/off"
                            android:textAllCaps="true"
                            android:textColor="#000"
                            android:textSize="22sp" />

                    </LinearLayout>


                    <ToggleButton
                        android:id="@+id/toggle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/f1"
                        android:layout_centerInParent="true"
                        android:layout_margin="16dp"
                        android:background="@drawable/roundedbutton"
                        android:fontFamily="@font/abc"
                        android:gravity="center"
                        android:paddingStart="16dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="8dp"
                        android:text="@string/toggleButton"
                        android:textColor="#ffffff"
                        android:textOff="@string/start_recording"
                        android:textOn="@string/stop_recording" />

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="300dp"
                        android:layout_below="@id/toggle"
                        android:scaleType="centerCrop"
                        android:src="@drawable/web_hi_res_512" />


                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/saved_to" />
            </android.support.v7.widget.CardView>


        </RelativeLayout>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#f4414d">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/regular"
                    android:padding="16dp"
                    android:text="@string/notice"
                    android:textColor="#fff" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>